@@ -1,6 +1,8 @@
-<p>Please <a href="http://[% sitename %]/account/verify/secondary/auth?token=[% token %]&redirect=[% redirect %]">click here</a> to confirm your identity.</p>
+<p>Please click the button below to verify your identity:</p>
 
-<p><b>NOTE:</b> The link contained in this email is only valid for the next 10 minutes.</p>
+<p style="text-align: center;"><a style="text-decoration: none; display: block; margin: 10px; padding: 15px; font-size: 120%; font-weight: bold; color: white; background-color: #0089e5; border-radius: 5px; border: 1px solid #0000a0;" href="http://[% sitename %]/account/verify/secondary/auth?token=[% token %]&redirect=[% redirect %]">Confirm Your Identity</a></p>
+
+<p><b>NOTE:</b> The link contained in this email is only valid for the next 30 minutes.</p>
 
 <h4>Why is this needed?</h4>
 <p>
