@@ -2,8 +2,12 @@
 <div class="alert alert-warning">[% error_message %]</div>
 [% END %]
 <form action="/login" method="POST" enctype="multipart/form-data">
-    [% IF redirect_after || params.redirect_after %]
-        <input type="hidden" name="redirect_after" value="[% redirect_after || params.redirect_after %]">
+    [% redirect_uri = redirect_after || params.redirect_after %]
+    [% IF redirect_uri == '/login' || redirect_uri == '' || redirect_uri.match('\/account\/verify\/secondary\/auth') %]
+        [% redirect_uri = '/account' %]
+    [% END %]
+    [% IF redirect_uri %]
+        <input type="hidden" name="redirect_after" value="[% redirect_uri %]">
     [% END %]
     [% IF sso_id || params.sso_id %]
         <input type="hidden" name="sso_id" value="[% sso_id || params.sso_id %]">
