@@ -4,6 +4,11 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2019-03-06
+ * Increased the timeout of secondary auth to 30 minutes.
+ * Made a better secondary auth email template.
+ * Made secondary auth not get into an infinite loop.
+
 2019-02-25
  * Added option to wing.object.save() in wing.vue.js.
  * Added wing-select-new directive to wing.vue.js.
